fixed photo spacing on dash

--- a/app/assets/stylesheets/clocks.css
+++ b/app/assets/stylesheets/clocks.css
@@ -71,7 +71,7 @@ h6 {
   transition-property: background;
   transition-duration: .5s;
   background: rgb(255, 255, 255);  /*Fall-back for browsers that don't support rgba */
-  background: rgba(255, 255, 255, .3);
+  background: rgba(255, 255, 255, .1);
 }
 
 .ul-clock:hover {
