--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -77,6 +77,7 @@ ul {
     margin-bottom: 10px;
     padding-right: 5px;
     height: 150px;
+    width: 100%;
 }
 
 .dashboard-articles li h3 {
@@ -147,6 +148,7 @@ ul {
 
 .col-dashboard-photos {
   display: inline-block;
+  margin-left: 12px;
   width: 100%;
 }
 
